--- a/jobs/static/jobs/styles.css
+++ b/jobs/static/jobs/styles.css
@@ -13,3 +13,12 @@
 	max-height: 35px;
 	max-width: 35px;
 }
+
+.card-header {
+    position: relative;
+}
+.status {
+    position: absolute;
+    top: 0;
+    right: 0.5rem;
+}
