--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -2,55 +2,71 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{% static 'jobs/styles.css' %}">
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	<!-- navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand text-uppercase" href="#">Marketplace</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand text-uppercase" href="{% url 'home' %}">Marketplace</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				{% if user.is_authenticated %}
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Create a job</a>
-					</li>
-				{% endif %}
-			</ul>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        {% if user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Create a job</a>
+          </li>
+        {% endif %}
+      </ul>
 
-			<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-				{% if user.is_authenticated %}
-					<li class="nav-item active">
-						<a class="nav-link" href="#">
-							<img src="{{ user.profile.photo.url }}" class="rounded nav-photo">
-						</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="#">{{ user.username }}</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Logout</a>
-					</li>
-				{% else %}
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Login</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Signup</a>
-					</li>
-				{% endif %}
-			</ul>
-		</div>
-	</nav>
-	<!-- /navbar -->
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        {% if user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link" href="#">
+              <img src="{{ user.profile.photo.url }}" class="rounded nav-photo">
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">{{ user.username }}</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'signup' %}">Signup</a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+  <!-- /navbar -->
 
-	{% block content %}{% endblock %}
-	
+  {# messages #}
+  {# display messages if any are sent by views #}
+  {% if messages %}
+    {% for message in messages %}
+      {# if message tag is error change it to danger since bootstrap doesn't have error class #}
+      <p class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}">{{ message }}</p>
+    {% endfor %}
+  {% endif %}
+  {# /messages #}
+
+  {# bootstrap container #}
+  <div class="container">
+    {% block content %}{% endblock %}
+	</div>
+  {# /bootstrap container #}
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
