--- a/accounts/templates/registration/logged_out.html
+++ b/accounts/templates/registration/logged_out.html
@@ -1,11 +1,13 @@
 {% extends 'jobs/base.html' %}
 
 {% block content %}
-  <div class="form">
-    <h2>You Have Been Logged Out</h2>
-    {# login link #}
-{#    return parameter is used instead of next parameter in order to prevent redirecting to previous page on logging out #}
-{#    server should redirect to logout page instead#}
-    <a href="{% url 'login' %}?next={{ request.GET.return }}">Click here to login again</a>
+  <div class="card mt-4 text-center">
+    <div class="card-body">
+      <h4 class="card-title">You Have Been Logged Out</h4>
+      {# login link #}
+      {# return parameter is used instead of next parameter in order to prevent redirecting to previous page on logging out #}
+      {# server should redirect to logout page instead#}
+      <a href="{% url 'login' %}?next={{ request.GET.return }}">Click here to login again</a>
+    </div>
   </div>
 {% endblock %}
