--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -20,7 +20,7 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         {% if user.is_authenticated %}
           <li class="nav-item active">
-            <a class="nav-link" href="#">Create a job</a>
+            <a class="nav-link" href="{% url 'job_create' %}">Create a job</a>
           </li>
         {% endif %}
       </ul>
@@ -56,7 +56,12 @@
   {% if messages %}
     {% for message in messages %}
       {# if message tag is error change it to danger since bootstrap doesn't have error class #}
-      <p class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}">{{ message }}</p>
+      <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %} alert-dismissible fade show">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
     {% endfor %}
   {% endif %}
   {# /messages #}
@@ -70,5 +75,9 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>
+    {# Enable dismissal of a message #}
+    $('.alert').alert()
+  </script>
 </body>
 </html>
