--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -7,13 +7,13 @@
     <div class="my-4 card text-center">
       <div class="card-header">
         <h5 class="card-title">{{ job.title }}</h5>
-        <span class="status text-{% if job.is_done %}danger{% elif job.freelancer%}warning{% else %}success{% endif %}">
-          {% if job.is_done %}Done{% elif job.freelancer%}Taken{% else %}Available{% endif %}
+        <span class="status text-{% if job.get_status == 'Done' %}danger{% elif job.get_status == 'Taken' %}warning{% else %}success{% endif %}">
+          {{ job.get_status }}
         </span>
       </div>
       <div class="card-body">
         <p class="card-text">{{ job.description|truncatewords:50  }}</p>
-        <a href="#" class="btn btn-primary">View Details</a>
+        <a href="{{ job.get_absolute_url }}" class="btn btn-primary">View Details</a>
       </div>
       <div class="card-footer text-muted">
         {{ job.timestamp }}
