--- a/jobs/templates/jobs/job_detail.html
+++ b/jobs/templates/jobs/job_detail.html
@@ -3,5 +3,24 @@
 {% block title %}Job detail{% endblock title %}
 
 {% block content %}
-
+  <div class="card mt-4">
+    <div class="card-body">
+      <h5 class="card-title">{{ job.title }}</h5>
+        <span class="status text-{% if job.get_status == 'Done' %}danger{% elif job.get_status == 'Taken' %}warning{% else %}success{% endif %}">
+          {{ job.get_status }}
+        </span>
+      <p class="card-text">{{ job.description }}</p>
+      <p class="card-text">Budget: <span class="font-weight-bold">${{ job.budget }}</span></p>
+      <p class="text-muted">Created: {{ job.timestamp }}</p>
+        {% if user.is_authenticated %}
+          {% if not job.freelancer %}
+            <a href="{% url 'accept' job.pk %}" class="btn btn-primary mt-2">Accept</a>
+          {% endif %}
+          {% if user.profile == job.freelancer %}
+            <a href="{% url 'decline' job.pk %}" class="btn btn-danger mt-2 mr-1">Decline</a>
+            <a href="{% url 'done' job.pk %}" class="btn btn-success mt-2">Done</a>
+          {% endif %}
+        {% endif %}
+    </div>
+  </div>
 {% endblock content %}
