--- a/jobs/static/jobs/styles.css
+++ b/jobs/static/jobs/styles.css
@@ -23,3 +23,11 @@
     top: 0.2rem;
     right: 0.7rem;
 }
+
+.status-username {
+    color: inherit;
+}
+
+.status-username:hover {
+    color: inherit;
+}
